--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -30,6 +30,7 @@ http {
 		server_name ccarnot.42.fr;
 		root /var/www/ccarnot/wordpress;
 		index index.php index.html index.htm index.nginx-debian.html;
+#		index site.html index.php index.htm index.nginx-debian.html;
 
 		location / {
 #			autoindex on;
