--- a/srcs/requirements/bonus/ftp_server/Dockerfile
+++ b/srcs/requirements/bonus/ftp_server/Dockerfile
@@ -8,8 +8,11 @@ EXPOSE 20-21
 
 COPY conf/vsftpd.conf /etc/vsftpd.conf
 
-RUN mkdir -p /var/www/html \
-	&& chmod 755 /var/www/html
+#RUN mkdir -p /var/www/html \
+#	&& chmod 755 /var/www/html
+
+RUN mkdir -p /var/www/ccarnot \
+	&& chmod 755 /var/www/ccarnot
 
 COPY tools/vsftpd.sh /tmp/vsftpd.sh
 RUN chmod +x /tmp/vsftpd.sh
