--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -30,10 +30,8 @@ http {
 		server_name ccarnot.42.fr;
 		root /var/www/ccarnot/wordpress;
 		index index.php index.html index.htm index.nginx-debian.html;
-#		index site.html index.php index.htm index.nginx-debian.html;
 
 		location / {
-#			autoindex on;
 #			try_files $uri $uri/ =404;
 			try_files $uri $uri/ /index.php$is_args$args;
 		}
@@ -47,6 +45,28 @@ http {
 			fastcgi_param   SCRIPT_FILENAME $document_root$fastcgi_script_name;
 			fastcgi_param   SCRIPT_NAME     $fastcgi_script_name;
 		}
+	}
+
+	server {
+		error_log /var/log/nginx/error.log;
+		access_log /var/log/nginx/access.log;
+
+		listen 443 ssl;
+		ssl_certificate /etc/nginx/ssl/inception.crt;
+		ssl_certificate_key /etc/nginx/ssl/inception.key;
+		ssl_protocols TLSv1.2 TLSv1.3;
+		
+		server_name static.42.fr;
+
+		location / {
+			proxy_pass http://static_site:81;
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_set_header X-Forwarded-Proto $scheme;
+			try_files $uri $uri/ =404;
+		}
+		
 	}
 }
 
