--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -26,7 +26,7 @@ http {
 		ssl_certificate /etc/nginx/ssl/inception.crt;
 		ssl_certificate_key /etc/nginx/ssl/inception.key;
 		ssl_protocols TLSv1.2 TLSv1.3;
-		
+
 		server_name ccarnot.42.fr;
 		root /var/www/ccarnot/wordpress;
 		index index.php index.html index.htm index.nginx-debian.html;
@@ -35,7 +35,7 @@ http {
 #			try_files $uri $uri/ =404;
 			try_files $uri $uri/ /index.php$is_args$args;
 		}
-		
+
 		location ~ \.php$ {
 #			include snippets/fastcgi-php.conf;
 			fastcgi_split_path_info ^(.+\.php)(/.+)$; 
@@ -44,6 +44,27 @@ http {
 			include fastcgi_params;
 			fastcgi_param   SCRIPT_FILENAME $document_root$fastcgi_script_name;
 			fastcgi_param   SCRIPT_NAME     $fastcgi_script_name;
+		}
+
+		location /adminer/ {
+			proxy_pass http://adminer:8080;
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_set_header X-Forwarded-Proto $scheme;
+		}
+
+    	          location /portainer {
+			  proxy_pass http://portainer:9000/;
+			  proxy_set_header Host $host;
+			  proxy_set_header X-Real-IP $remote_addr;
+			  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			  proxy_set_header X-Forwarded-Proto $scheme;
+			  proxy_http_version 1.1;
+			  proxy_set_header Upgrade $http_upgrade;
+			  proxy_set_header Connection "upgrade";
+			  proxy_read_timeout 900s;
+			  proxy_redirect off;
 		}
 	}
 
@@ -66,7 +87,6 @@ http {
 			proxy_set_header X-Forwarded-Proto $scheme;
 			try_files $uri $uri/ =404;
 		}
-		
 	}
 }
 
