--- a/srcs/requirements/bonus/portainer/Dockerfile
+++ b/srcs/requirements/bonus/portainer/Dockerfile
@@ -2,7 +2,7 @@ FROM debian:bullseye
 
 RUN apt-get update \
 	&& apt-get upgrade -y \
-	&& apt-get install -y wget tar
+	&& apt-get install -y wget tar apache2-utils ca-certificates
 
 RUN wget https://github.com/portainer/portainer/releases/download/2.20.3/portainer-2.20.3-linux-amd64.tar.gz \
 	&& tar xvzf /portainer-2.20.3-linux-amd64.tar.gz  -C /usr/local/bin/ \
@@ -13,7 +13,6 @@ RUN chmod +x /usr/local/bin/portainer/portainer
 #RUN mkdir -p /data
 
 EXPOSE 9000
-
 
 COPY tools/portainer.sh /portainer.sh
 RUN chmod +x /portainer.sh
