--- a/srcs/requirements/bonus/portainer/Dockerfile
+++ b/srcs/requirements/bonus/portainer/Dockerfile
@@ -4,9 +4,9 @@ RUN apt-get update \
 	&& apt-get upgrade -y \
 	&& apt-get install -y wget tar apache2-utils ca-certificates
 
-RUN wget https://github.com/portainer/portainer/releases/download/2.20.3/portainer-2.20.3-linux-amd64.tar.gz \
-	&& tar xvzf /portainer-2.20.3-linux-amd64.tar.gz  -C /usr/local/bin/ \
-	&& rm -rf portainer-2.20.3-linux-amd64.tar.gz
+RUN wget https://github.com/portainer/portainer/releases/download/2.19.5/portainer-2.19.5-linux-amd64.tar.gz \
+	&& tar xvzf /portainer-2.19.5-linux-amd64.tar.gz  -C /usr/local/bin/ \
+	&& rm -rf portainer-2.19.5-linux-amd64.tar.gz
 
 RUN chmod +x /usr/local/bin/portainer/portainer
 
@@ -14,8 +14,8 @@ RUN chmod +x /usr/local/bin/portainer/portainer
 
 EXPOSE 9000
 
-COPY tools/portainer.sh /portainer.sh
-RUN chmod +x /portainer.sh
-ENTRYPOINT ["/portainer.sh"]
+#COPY tools/portainer.sh /portainer.sh
+#RUN chmod +x /portainer.sh
+#ENTRYPOINT ["/portainer.sh"]
 
-#CMD ["/usr/local/bin/portainer/portainer"]
+CMD ["/usr/local/bin/portainer/portainer"]
